exports[`CssFormatter > formats @layer, @media, @supports, and @starting-style ancestor rules toJSON 1`] = `
{
  "element": {
    "uid": "btn-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".test-btn",
      "ancestors": [
        {
          "type": "layer",
          "name": "base"
        },
        {
          "type": "media",
          "query": "(min-width: 500px)"
        },
        {
          "type": "supports",
          "query": "(display: flex)"
        },
        {
          "type": "starting-style"
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "display",
          "value": "flex",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @layer, @media, @supports, and @starting-style ancestor rules toString 1`] = `
Styles for button (uid: "btn-1"):

  @layer base {
    @media (min-width: 500px) {
      @supports (display: flex) {
        @starting-style {
          .test-btn (<style>) {
            display: flex;
          }
        }
      }
    }
  }
`;

exports[`CssFormatter > formats @navigation ancestor rule toJSON 1`] = `
{
  "element": {
    "uid": "elem-nav",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".nav-link",
      "ancestors": [
        {
          "type": "navigation",
          "query": "same-document"
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "color",
          "value": "navy",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @navigation ancestor rule toString 1`] = `
Styles for button (uid: "elem-nav"):

  @navigation same-document {
    .nav-link (<style>) {
      color: navy;
    }
  }
`;

exports[`CssFormatter > formats @scope ancestor rule toJSON 1`] = `
{
  "element": {
    "uid": "item-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".scoped-item",
      "ancestors": [
        {
          "type": "scope",
          "query": "(:root)"
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @scope ancestor rule toString 1`] = `
Styles for button (uid: "item-1"):

  @scope (:root) {
    .scoped-item (<style>) {
      color: blue;
    }
  }
`;

exports[`CssFormatter > formats constructed stylesheets with and without sourceURL pragma toJSON 1`] = `
{
  "element": {
    "uid": "elem-constructed",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".constructed-btn",
      "source": "constructed stylesheet",
      "properties": [
        {
          "name": "color",
          "value": "purple",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".themed-btn",
      "source": "theme.css:11",
      "properties": [
        {
          "name": "color",
          "value": "orange",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats constructed stylesheets with and without sourceURL pragma toString 1`] = `
Styles for button (uid: "elem-constructed"):

  .constructed-btn (constructed stylesheet) {
    color: purple;
  }

  .themed-btn (theme.css:11) {
    color: orange;
  }
`;

exports[`CssFormatter > formats data: and blob: stylesheet URLs correctly toJSON 1`] = `
{
  "element": {
    "uid": "data-elem",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".data-rule",
      "source": "data-uri",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".blob-rule",
      "source": "blob",
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats data: and blob: stylesheet URLs correctly toString 1`] = `
Styles for button (uid: "data-elem"):

  .data-rule (data-uri) {
    color: blue;
  }

  .blob-rule (blob) {
    color: green;
  }
`;

exports[`CssFormatter > formats element label with id, class, and uid and no styles toJSON 1`] = `
{
  "element": {
    "uid": "1_1",
    "selector": "div#main"
  },
  "rules": []
}
`;

exports[`CssFormatter > formats element label with id, class, and uid and no styles toString 1`] = `
Styles for div#main (uid: "1_1"):

  (no styles)
`;

exports[`CssFormatter > formats injected stylesheet rules toJSON 1`] = `
{
  "element": {
    "uid": "elem-injected",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".extension-override",
      "source": "injected stylesheet",
      "properties": [
        {
          "name": "display",
          "value": "none",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats injected stylesheet rules toString 1`] = `
Styles for button (uid: "elem-injected"):

  .extension-override (injected stylesheet) {
    display: none;
  }
`;

exports[`CssFormatter > formats inline styles with active and overloaded properties toJSON 1`] = `
{
  "element": {
    "uid": "1_2",
    "selector": "button"
  },
  "rules": [
    {
      "type": "inline",
      "selector": "element.style",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "overloaded"
        },
        {
          "name": "font-size",
          "value": "14px",
          "status": "active",
          "important": true
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inline styles with active and overloaded properties toString 1`] = `
Styles for button (uid: "1_2"):

  element.style {
    [overloaded] color: red;
    font-size: 14px !important;
  }
`;

exports[`CssFormatter > formats inspector stylesheet rules toJSON 1`] = `
{
  "element": {
    "uid": "elem-inspector",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": "#interactive-test",
      "source": "via inspector",
      "properties": [
        {
          "name": "outline",
          "value": "2px solid red",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inspector stylesheet rules toString 1`] = `
Styles for button (uid: "elem-inspector"):

  #interactive-test (via inspector) {
    outline: 2px solid red;
  }
`;

exports[`CssFormatter > formats mixed inline and matched rules toJSON 1`] = `
{
  "element": {
    "uid": "1_1",
    "selector": "button#btn-id"
  },
  "rules": [
    {
      "type": "inline",
      "selector": "element.style",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".btn",
      "source": "style.css:6",
      "properties": [
        {
          "name": "font-size",
          "value": "16px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats mixed inline and matched rules toString 1`] = `
Styles for button#btn-id (uid: "1_1"):

  element.style {
    color: red;
  }

  .btn (style.css:6) {
    font-size: 16px;
  }
`;

exports[`CssFormatter > formats nested CSS rules with nesting ancestors toJSON 1`] = `
{
  "element": {
    "uid": "elem-child",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": "& .child",
      "ancestors": [
        {
          "type": "nesting",
          "selector": ".card"
        }
      ],
      "source": "styles.css:16",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats nested CSS rules with nesting ancestors toString 1`] = `
Styles for button (uid: "elem-child"):

  .card {
    & .child (styles.css:16) {
      color: blue;
    }
  }
`;

exports[`CssFormatter > formats transition, animation, and attributes styles toJSON 1`] = `
{
  "element": {
    "uid": "table-1",
    "selector": "table#data"
  },
  "rules": [
    {
      "type": "transition",
      "selector": "transitions style",
      "properties": [
        {
          "name": "opacity",
          "value": "1",
          "status": "active"
        }
      ]
    },
    {
      "type": "animation",
      "name": "pulse",
      "selector": "pulse animation",
      "properties": [
        {
          "name": "transform",
          "value": "scale(1.2)",
          "status": "active"
        }
      ]
    },
    {
      "type": "attributes",
      "selector": "table[attributes style]",
      "properties": [
        {
          "name": "border",
          "value": "1px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats transition, animation, and attributes styles toString 1`] = `
Styles for table#data (uid: "table-1"):

  transitions style {
    opacity: 1;
  }

  pulse animation {
    transform: scale(1.2);
  }

  table[attributes style] {
    border: 1px;
  }
`;

exports[`CssFormatter > maps invalid and disabled property statuses toJSON 1`] = `
{
  "element": {
    "uid": "elem-diag",
    "selector": "button"
  },
  "rules": [
    {
      "type": "inline",
      "selector": "element.style",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "active"
        },
        {
          "name": "background",
          "value": "invalid-val",
          "status": "invalid"
        },
        {
          "name": "opacity",
          "value": "0.5",
          "status": "disabled"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > maps invalid and disabled property statuses toString 1`] = `
Styles for button (uid: "elem-diag"):

  element.style {
    color: red;
    [invalid] background: invalid-val;
    [disabled] opacity: 0.5;
  }
`;

exports[`CssFormatter > resolves container queries with node uid toJSON 1`] = `
{
  "element": {
    "uid": "elem-widget",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".widget",
      "ancestors": [
        {
          "type": "container",
          "query": "(min-width: 300px)",
          "name": "sidebar-cq",
          "container": {
            "uid": "uid-42",
            "selector": "aside#sidebar"
          }
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "padding",
          "value": "10px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > resolves container queries with node uid toString 1`] = `
Styles for button (uid: "elem-widget"):

  /* container: aside#sidebar (uid: "uid-42") */
  @container sidebar-cq (min-width: 300px) {
    .widget (<style>) {
      padding: 10px;
    }
  }
`;

exports[`CssFormatter > rule subsets > matched rules all 3 rules toJSON 1`] = `
{
  "element": {
    "uid": "btn-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".rule-1",
      "source": "app.css:11",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".rule-2",
      "source": "app.css:21",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".rule-3",
      "source": "app.css:31",
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > rule subsets > matched rules all 3 rules toString 1`] = `
Styles for button (uid: "btn-1"):

  .rule-1 (app.css:11) {
    color: red;
  }

  .rule-2 (app.css:21) {
    color: blue;
  }

  .rule-3 (app.css:31) {
    color: green;
  }
`;

exports[`CssFormatter > rule subsets > matched rules subset - last rule toJSON 1`] = `
{
  "element": {
    "uid": "btn-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".rule-3",
      "source": "app.css:31",
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > rule subsets > matched rules subset - last rule toString 1`] = `
Styles for button (uid: "btn-1"):

  .rule-3 (app.css:31) {
    color: green;
  }
`;
